# SC4000-Group28

./: README.md  SC4000.ipynb  SC4000_v1.ipynb  pyproject.toml
